overlays/test/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: main
        image: localhost:5001/demo-app:v-2idmh
        ports:
        - containerPort: 80
        env:
        - name: mysql
          value: "localhost:3306"
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: data
          mountPath: "/data"
        livenessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash", "-c", "sleep 0"]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: demo-app-pvc
